k8/mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  type: NodePort
  ports:
    - port: 27017
      nodePort: 31002
  selector:
    app: mongo

---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mongo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:3.6.3
          ports:
            - containerPort: 27017
