k8/user.yaml
apiVersion: v1
kind: Service
metadata:
  name: user
  labels:
    app: user
spec:
  type: NodePort
  ports:
    - port: 8080
      nodePort: 31001
  selector:
    app: user
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: user
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: user:v1
          ports:
            - containerPort: 8080
